modification and table

--- a/src/app/views/administration/admin-table/table-layout/table-layout.component.html
+++ b/src/app/views/administration/admin-table/table-layout/table-layout.component.html
@@ -2,29 +2,29 @@
   <mat-drawer-container >
   <mat-drawer style="width:20%" mode="side" opened>
     <mat-list>
-      <mat-list-item class="item"routerLink='../table-layout/school-list'>School </mat-list-item>
+      <mat-list-item class="item"routerLink='../table-layout/school-table'>School </mat-list-item>
       <mat-divider></mat-divider> 
       <mat-list-item class="item"routerLink='../table-layout/schoolType-list'>School Type </mat-list-item>
       <mat-divider></mat-divider> 
       <mat-list-item class="item" routerLink='../table-layout/paymentType-list'>Payement Type </mat-list-item>
       <mat-divider></mat-divider>
-      <mat-list-item class="item" routerLink='../table-layout/class'>Class</mat-list-item>
+      <mat-list-item class="item" routerLink='../table-layout/class-list'>Class</mat-list-item>
       <mat-divider></mat-divider>
-      <mat-list-item class="item" routerLink='../table-layout/book'>Book </mat-list-item>
+      <mat-list-item class="item" routerLink='../table-layout/book-list'>Book </mat-list-item>
       <mat-divider></mat-divider>
-      <mat-list-item class="item" routerLink='../table-layout/religion'>Religion</mat-list-item>
+      <mat-list-item class="item" routerLink='../table-layout/religion-list'>Religion</mat-list-item>
       <mat-divider></mat-divider>
-      <mat-list-item class="item" routerLink='../table-layout/caste'>Caste</mat-list-item>
+      <mat-list-item class="item" routerLink='../table-layout/caste-list'>Caste</mat-list-item>
       <mat-divider></mat-divider>
-      <mat-list-item class="item" routerLink='../table-layout/mothertongue'>MotherTongue</mat-list-item>
+      <mat-list-item class="item" routerLink='../table-layout/mt-list'>MotherTongue</mat-list-item>
       <mat-divider></mat-divider>
-      <mat-list-item class="item" routerLink='../table-layout/branch'>Branch</mat-list-item>
+      <mat-list-item class="item" routerLink='../table-layout/branch-list'>Branch</mat-list-item>
       <mat-divider></mat-divider>
-      <mat-list-item class="item" routerLink='../table-layout/occupation'>Occupation</mat-list-item>
+      <mat-list-item class="item" routerLink='../table-layout/occupation-list'>Occupation</mat-list-item>
       <mat-divider></mat-divider>
-      <mat-list-item class="item" routerLink='../table-layout/society'>Society</mat-list-item>
+      <mat-list-item class="item" routerLink='../table-layout/society-list'>Society</mat-list-item>
       <mat-divider></mat-divider>
-      <mat-list-item class="item" routerLink='../table-layout/nationality'>Nationality</mat-list-item>
+      <mat-list-item class="item" routerLink='../table-layout/nationality-list'>Nationality</mat-list-item>
       <mat-divider></mat-divider>
     </mat-list>
     </mat-drawer>
