--- a/src/app/views/administration/mother-tongue-master/mother-tongue-master.component.scss
+++ b/src/app/views/administration/mother-tongue-master/mother-tongue-master.component.scss
@@ -15,13 +15,15 @@
       margin-bottom: 2%;
       font-weight: 500;
       width: 25%;
-      margin-left: 37%;;
-        color:#fff !important;
+      margin-left: 37%;
+      color:#fff !important;
+  
   }
   .submit-title{
       font-weight: 500;
   }
   .mat-card{
-      margin-top: 5%;
-      margin-bottom: 30%;
+    margin-top: 5%;
+    margin-bottom:28%;
   }
+ 
