--- a/src/app/views/student-management/create-admission/create-admission.component.html
+++ b/src/app/views/student-management/create-admission/create-admission.component.html
@@ -82,100 +82,123 @@
           <input matInput placeholder="Contact No">
         </mat-form-field>
 
-        <mat-form-field class="example-full-width formFieldAlign">
-          <input matInput placeholder="status">
-        </mat-form-field>
-
-        <mat-form-field class="example-full-width formFieldAlign">
-          <input matInput placeholder="liveStatus">
+        <mat-form-field>
+          <mat-label>Status</mat-label>
+          <mat-select>
+            <mat-option >
+              Indian
+            </mat-option>
+          </mat-select>
         </mat-form-field>
         
+
+        <mat-form-field>
+          <mat-label>Live Status</mat-label>
+          <mat-select>
+            <mat-option >
+              Indian
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+        
+   
         <mat-form-field class="example-full-width formFieldAlign">
           <input matInput placeholder="Identity By Mark Or AadharNo;">
         </mat-form-field>
 
         
-        <mat-form-field class="example-full-width formFieldAlign">
-          <input matInput placeholder="ClassName">
+        <mat-form-field>
+          <mat-label>Class Name</mat-label>
+          <mat-select>
+            <mat-option >
+              Indian
+            </mat-option>
+          </mat-select>
         </mat-form-field>
-
         
-        <mat-form-field class="example-full-width formFieldAlign">
-          <input matInput placeholder="Code">
-        </mat-form-field>
 
-        <mat-form-field class="example-full-width formFieldAlign">
-          <input matInput placeholder="Fees">
+        <mat-form-field>
+          <mat-label>Religion Name</mat-label>
+          <mat-select>
+            <mat-option >
+              Indian
+            </mat-option>
+          </mat-select>
         </mat-form-field>
-
-        <mat-form-field class="example-full-width formFieldAlign">
-          <input matInput placeholder="Religion Name">
-        </mat-form-field>
+        
+>
       
-        <mat-form-field class="example-full-width formFieldAlign">
-          <input matInput placeholder="Religion Code">
+  
+        <mat-form-field>
+          <mat-label>Caste Name</mat-label>
+          <mat-select>
+            <mat-option >
+              Indian
+            </mat-option>
+          </mat-select>
         </mat-form-field>
+        
 
         
-        <mat-form-field class="example-full-width formFieldAlign">
-          <input matInput placeholder="Caste Name">
+  
+        <mat-form-field>
+          <mat-label>SubCaste Name</mat-label>
+          <mat-select>
+            <mat-option >
+              Indian
+            </mat-option>
+          </mat-select>
         </mat-form-field>
         
-        <mat-form-field class="example-full-width formFieldAlign">
-          <input matInput placeholder="Caste Code">
+ 
+        <mat-form-field>
+          <mat-label>Occupation</mat-label>
+          <mat-select>
+            <mat-option >
+              Indian
+            </mat-option>
+          </mat-select>
         </mat-form-field>
-
         
-        <mat-form-field class="example-full-width formFieldAlign">
-          <input matInput placeholder="SubCaste Name">
-        </mat-form-field>
-      
-        <mat-form-field class="example-full-width formFieldAlign">
-          <input matInput placeholder="SubCaste Code">
-        </mat-form-field>
-     
-         
-        <mat-form-field class="example-full-width formFieldAlign">
-          <input matInput placeholder="Occupation Name">
-        </mat-form-field>
-     
-        <mat-form-field class="example-full-width formFieldAlign">
-          <input matInput placeholder="Occupation Code">
-        </mat-form-field>
-     
 
-        <mat-form-field class="example-full-width formFieldAlign">
-          <input matInput placeholder="society Name">
-        </mat-form-field>
      
-        <mat-form-field class="example-full-width formFieldAlign">
-          <input matInput placeholder="society Code">
+  
+        <mat-form-field>
+          <mat-label>Society</mat-label>
+          <mat-select>
+            <mat-option >
+              Indian
+            </mat-option>
+          </mat-select>
         </mat-form-field>
-     
-        <mat-form-field class="example-full-width formFieldAlign">
-          <input matInput placeholder="Nationality">
+        
+
+        <mat-form-field>
+          <mat-label>Nationality</mat-label>
+          <mat-select>
+            <mat-option >
+              Indian
+            </mat-option>
+          </mat-select>
         </mat-form-field>
-     
-        <mat-form-field class="example-full-width formFieldAlign">
-          <input matInput placeholder="Code">
-        </mat-form-field>
+        
      
         
         <mat-form-field class="example-full-width formFieldAlign">
           <input matInput placeholder="Mother Name">
         </mat-form-field>
      
-        <mat-form-field class="example-full-width formFieldAlign">
-          <input matInput placeholder="Code">
-        </mat-form-field>
      
-        <mat-form-field class="example-full-width formFieldAlign">
-          <input matInput placeholder="Branch Name">
+        <mat-form-field>
+          <mat-label>Branch Name</mat-label>
+          <mat-select>
+            <mat-option >
+              Indian
+            </mat-option>
+          </mat-select>
         </mat-form-field>
-     
-        <mat-form-field class="example-full-width formFieldAlign">
-          <input matInput placeholder="Branch Code">
-        </mat-form-field>
+        
+ 
      
         <div>
       </div>
