--- a/src/app/views/administration/admin-table/school-table/school-table.component.html
+++ b/src/app/views/administration/admin-table/school-table/school-table.component.html
@@ -13,14 +13,20 @@
   
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef> Name </th>
-        <td mat-cell *matCellDef="let element"> {{element.paymentTypeName}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.schoolName}} </td>
       </ng-container>
   
       <ng-container matColumnDef="code">
         <th mat-header-cell *matHeaderCellDef> Code </th>
-        <td mat-cell *matCellDef="let element"> {{element.paymentTypeCode}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.schoolCode}} </td>
       </ng-container>
   
+      
+      <ng-container matColumnDef="address">
+        <th mat-header-cell *matHeaderCellDef> Address </th>
+        <td mat-cell *matCellDef="let element"> {{element.schoolAddress}} </td>
+      </ng-container>
+
       <ng-container matColumnDef="edit">
         <th mat-header-cell *matHeaderCellDef class="icon-align "> Edit</th>
         <td mat-cell *matCellDef="let element" class="icon-align">
