--- a/src/app/views/administration/school-master/school-master.component.html
+++ b/src/app/views/administration/school-master/school-master.component.html
@@ -1,44 +1,55 @@
-<div class="mat-card">
-  <mat-toolbar color='primary'><span style="color:#fff">School Master</span> </mat-toolbar>
-  <form [formGroup]='schoolForm' (ngSubmit)='submitForm()'>
-    <mat-form-field class="example-full-width formFieldAlign">
-      <input matInput formControlName='schoolName' placeholder="School Name *">
-      <mat-error *ngIf="schoolForm.get('schoolName').hasError('required')">
-        School Name <strong>required</strong>
-      </mat-error>
-      <mat-error *ngIf="!schoolForm.get('schoolName').hasError('required') &&
-    schoolForm.get('schoolName').hasError('pattern')">
-        School Name <strong>only Charecters allow</strong>
-      </mat-error>
-
-    </mat-form-field>
-
-    <mat-form-field class="example-full-width formFieldAlign">
-      <input matInput formControlName='schoolCode' placeholder="School Code">
-      <mat-error *ngIf="schoolForm.get('schoolCode').hasError('required')">
-        School Code <strong>required</strong>
-      </mat-error>
-      <mat-error *ngIf="!schoolForm.get('schoolCode').hasError('required') &&
-      schoolForm.get('schoolCode').hasError('pattern')">
-        School Code <strong>only Numbers allow</strong>
-      </mat-error>
-
-    </mat-form-field>
-
-
-  <mat-form-field class="example-full-width formFullFieldAlign">
-     <input matInput formControlName='schoolAddress' placeholder="school Address">
-      <mat-error *ngIf="schoolForm.get('schoolAddress').hasError('required')">
-        School Address <strong>required</strong>
-      </mat-error>
-      <mat-error *ngIf="!schoolForm.get('schoolAddress').hasError('required') &&
-                schoolForm.get('schoolAddress').hasError('pattern')">
-        School Address <strong>required</strong>
-      </mat-error>
-  </mat-form-field>
-    <div>
-      <button mat-raised-button type="submit" class="submit-btn" color="primary"><span
-          class='submit-title'>Submit</span></button>
+<mat-tab-group>
+  <mat-tab label="Master"> 
+    <div class="mat-card">
+      <mat-toolbar color='primary'><span style="color:#fff">School Master</span> </mat-toolbar>
+      <form [formGroup]='schoolForm' (ngSubmit)='submitForm()'>
+        <mat-form-field class="example-full-width formFieldAlign">
+          <input matInput formControlName='schoolName' placeholder="School Name *">
+          <mat-error *ngIf="schoolForm.get('schoolName').hasError('required')">
+            School Name <strong>required</strong>
+          </mat-error>
+          <mat-error *ngIf="!schoolForm.get('schoolName').hasError('required') &&
+        schoolForm.get('schoolName').hasError('pattern')">
+            School Name <strong>only Charecters allow</strong>
+          </mat-error>
+    
+        </mat-form-field>
+    
+        <mat-form-field class="example-full-width formFieldAlign">
+          <input matInput formControlName='schoolCode' placeholder="School Code">
+          <mat-error *ngIf="schoolForm.get('schoolCode').hasError('required')">
+            School Code <strong>required</strong>
+          </mat-error>
+          <mat-error *ngIf="!schoolForm.get('schoolCode').hasError('required') &&
+          schoolForm.get('schoolCode').hasError('pattern')">
+            School Code <strong>only Numbers allow</strong>
+          </mat-error>
+    
+        </mat-form-field>
+    
+    
+      <mat-form-field class="example-full-width formFullFieldAlign">
+         <input matInput formControlName='schoolAddress' placeholder="school Address">
+          <mat-error *ngIf="schoolForm.get('schoolAddress').hasError('required')">
+            School Address <strong>required</strong>
+          </mat-error>
+          <mat-error *ngIf="!schoolForm.get('schoolAddress').hasError('required') &&
+                    schoolForm.get('schoolAddress').hasError('pattern')">
+            School Address <strong>required</strong>
+          </mat-error>
+      </mat-form-field>
+        <div>
+          <button mat-raised-button type="submit" class="submit-btn" color="primary"><span
+              class='submit-title'>Submit</span></button>
+        </div>
+      </form>
     </div>
-  </form>
-</div>
+    
+  </mat-tab>
+  
+  <mat-tab label="Master Table"> 
+  <app-school-table></app-school-table>
+  </mat-tab>
+
+</mat-tab-group>
+
