--- a/src/app/views/administration/layout/layout.component.html
+++ b/src/app/views/administration/layout/layout.component.html
@@ -16,6 +16,8 @@
       <mat-divider></mat-divider>
       <mat-list-item class="item" routerLink='../master-layout/caste'>Caste</mat-list-item>
       <mat-divider></mat-divider>
+      <mat-list-item class="item" routerLink='../master-layout/SubCaste'>SubCaste</mat-list-item>
+      <mat-divider></mat-divider>
       <mat-list-item class="item" routerLink='../master-layout/mothertongue'>MotherTongue</mat-list-item>
       <mat-divider></mat-divider>
       <mat-list-item class="item" routerLink='../master-layout/branch'>Branch</mat-list-item>
