--- a/src/app/views/administration/occupation-master/occupation-master.component.html
+++ b/src/app/views/administration/occupation-master/occupation-master.component.html
@@ -1,28 +1,40 @@
+
+<mat-tab-group (selectedTabChange)="tabChanged($event)">
+  <mat-tab label="Master"> 
+    
 <div class="mat-card">
   <mat-toolbar color='primary'><span style="color:#fff">Occupation Master</span></mat-toolbar>
-    <form [formGroup]='occupationForm' (ngSubmit)='submit()'>
+  <form [formGroup]='occupationForm' #formDirective="ngForm" (ngSubmit)='submit(occupationForm,formDirective)'>
     <mat-form-field class="example-full-width formFieldAlign">
       <input matInput formControlName='name' placeholder="Occupation Name">
       <mat-error *ngIf='occupationForm.get("name").hasError("required")'>
-         Occupation is <strong>required</strong></mat-error>
+        Occupation is <strong>required</strong></mat-error>
       <mat-error *ngIf='!occupationForm.get("name").hasError("required")
       && occupationForm.get("name").hasError("pattern")'>
-        Occupation  <strong>only Charecters allow</strong></mat-error>
-    
+        Occupation <strong>only Charecters allow</strong></mat-error>
+
     </mat-form-field>
-  
-    <mat-form-field  class="example-full-width formFieldAlign">
+
+    <mat-form-field class="example-full-width formFieldAlign">
       <input matInput formControlName='code' placeholder="Occupation Code">
       <mat-error *ngIf='occupationForm.get("code").hasError("required")'>
         Occupation is <strong>required</strong></mat-error>
-     <mat-error *ngIf='!occupationForm.get("code").hasError("required")
+      <mat-error *ngIf='!occupationForm.get("code").hasError("required")
      && occupationForm.get("code").hasError("pattern")'>
-       Occupation Code <strong>only Numbers allow</strong></mat-error>
+        Occupation Code <strong>only Numbers allow</strong></mat-error>
     </mat-form-field>
-  
+
     <div>
-      <button mat-raised-button  type="submit" class="submit-btn" color="primary"><span class='submit-title'>Submit</span></button>
-      </div>  
-    </form>
-  </div>
+      <button mat-raised-button type="submit" class="submit-btn" color="primary"><span
+          class='submit-title'>Submit</span></button>
+    </div>
+  </form>
+</div>    
+  </mat-tab>
+  <mat-tab label="Occupation List"> 
+    <div *ngIf='tableshow==true'>
+      <app-occupation-table></app-occupation-table>
   
+    </div>
+  </mat-tab>
+</mat-tab-group>
