--- a/src/app/views/administration/payment-master/payment-master.component.html
+++ b/src/app/views/administration/payment-master/payment-master.component.html
@@ -1,8 +1,11 @@
-<div class="mat-card">
+
+<mat-tab-group #tabGroup (selectedTabChange)="tabChanged($event)">
+  <mat-tab label="Master"> 
+    <div class="mat-card">
   <mat-toolbar color='primary' *ngIf='id ==undefined'><span style="color:#fff">Payment Master</span></mat-toolbar>
   <mat-toolbar color='primary' *ngIf='id !=undefined'><span style="color:#fff">Update Payment Master</span></mat-toolbar>
 
-  <form [formGroup]='paymentTypeForm' (ngSubmit)='submitPaymentType()' *ngIf='paymentTypeForm !=null'>
+  <form [formGroup]='paymentTypeForm' #formDirective="ngForm" (ngSubmit)='submitPaymentType(paymentTypeForm,formDirective)' *ngIf='paymentTypeForm !=null'>
     <mat-form-field class="example-full-width formFieldAlign">
       <input matInput formControlName='paymentType' placeholder="Payment Type">
 
@@ -31,4 +34,11 @@
       </button>
     </div>
   </form>
+</div>    
+  </mat-tab>
+  <mat-tab label="Payment Type List">
+ <div *ngIf='tableshow ==true'>
+  <app-payment-table></app-payment-table> 
 </div>
+</mat-tab>
+</mat-tab-group>
