--- a/src/app/views/administration/admin-table/branch-table/branch-table.component.html
+++ b/src/app/views/administration/admin-table/branch-table/branch-table.component.html
@@ -1,8 +1,10 @@
 <!--<mat-card>-->
   <div class='table-card'>
-    <mat-form-field>
-      <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Search..">
-    </mat-form-field>
+    <div style="width: 30%;float: right;">
+      <mat-form-field>
+        <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Search..">
+      </mat-form-field>
+    </div>
     <mat-toolbar color='primary'><span style="color:#fff">Branch List</span></mat-toolbar>
     <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
   
@@ -13,19 +15,18 @@
   
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef> Name </th>
-        <td mat-cell *matCellDef="let element"> {{element.paymentTypeName}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.name}} </td>
       </ng-container>
   
       <ng-container matColumnDef="code">
         <th mat-header-cell *matHeaderCellDef> Code </th>
-        <td mat-cell *matCellDef="let element"> {{element.paymentTypeCode}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.code}} </td>
       </ng-container>
   
       <ng-container matColumnDef="edit">
         <th mat-header-cell *matHeaderCellDef class="icon-align "> Edit</th>
         <td mat-cell *matCellDef="let element" class="icon-align">
-          <i class="material-icons icon_edit_color" routerLink='../../master-layout/payment'
-            [queryParams]='{id:element.id}' matTooltip="Edit">create</i>
+          <i class="material-icons icon_edit_color"  (click)='openDialog(element.id)' matTooltip="Edit">create</i>
         </td>
       </ng-container>
   
