--- a/src/app/views/administration/admin-table/sub-caste-table/sub-caste-table.component.html
+++ b/src/app/views/administration/admin-table/sub-caste-table/sub-caste-table.component.html
@@ -1,4 +1,4 @@
-<!--<mat-card>-->
+  <!--<mat-card>-->
   <div class='table-card'>
     <mat-form-field>
       <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Search..">
@@ -13,12 +13,12 @@
   
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef> Name </th>
-        <td mat-cell *matCellDef="let element"> {{element.paymentTypeName}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.name}} </td>
       </ng-container>
   
       <ng-container matColumnDef="code">
         <th mat-header-cell *matHeaderCellDef> Code </th>
-        <td mat-cell *matCellDef="let element"> {{element.paymentTypeCode}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.code}} </td>
       </ng-container>
   
       <ng-container matColumnDef="edit">
