--- a/src/app/views/administration/book-master/book-master.component.html
+++ b/src/app/views/administration/book-master/book-master.component.html
@@ -1,23 +1,34 @@
-<div class="mat-card">
-  <mat-toolbar color='primary'><span style="color:#fff">Book Master</span></mat-toolbar>
-  <form [formGroup]='bookForm' (ngSubmit)='submit()'>
-    <mat-form-field class="example-full-width formFieldAlign">
-      <input matInput formControlName='bookName' placeholder="Class Name">
-      <mat-error *ngIf='bookForm.get("bookName").hasError("required")'>Books Name is <strong>required</strong>
-      </mat-error>
-      <mat-error *ngIf='!bookForm.get("bookName").hasError("required") &&
-   bookForm.get("bookName").hasError("pattern")'>Books Name <strong>only Charecters allow</strong></mat-error>
-    </mat-form-field>
+<mat-tab-group (selectedTabChange)="tabChanged($event)">
+  <mat-tab label="Master"> 
 
-    <mat-form-field class="example-full-width formFieldAlign">
-      <input matInput formControlName='code' placeholder="Class Code">
-      <mat-error *ngIf='bookForm.get("code").hasError("required")'>Books Name is <strong>required</strong></mat-error>
-      <mat-error *ngIf='!bookForm.get("code").hasError("required") &&
-      bookForm.get("code").hasError("pattern")'>Books Name <strong>only Charecters allow</strong></mat-error>
-    </mat-form-field>
-    <div>
-      <button mat-raised-button type="submit" class="submit-btn" color="primary"><span
-          class='submit-title'>Submit</span></button>
-    </div>
-  </form>
-</div>
+
+    <div class="mat-card">
+      <mat-toolbar color='primary'><span style="color:#fff">Book Master</span></mat-toolbar>
+      <form [formGroup]='bookForm' #formDirective="ngForm" (ngSubmit)='submit(bookForm,formDirective)'>
+        <mat-form-field class="example-full-width formFieldAlign">
+          <input matInput formControlName='bookName' placeholder="Book Name">
+          <mat-error *ngIf='bookForm.get("bookName").hasError("required")'>Books Name is <strong>required</strong>
+          </mat-error>
+          <mat-error *ngIf='!bookForm.get("bookName").hasError("required") &&
+       bookForm.get("bookName").hasError("pattern")'>Books Name <strong>only Charecters allow</strong></mat-error>
+        </mat-form-field>
+    
+        <mat-form-field class="example-full-width formFieldAlign">
+          <input matInput formControlName='code' placeholder="Book Code">
+          <mat-error *ngIf='bookForm.get("code").hasError("required")'>Books Name is <strong>required</strong></mat-error>
+          <mat-error *ngIf='!bookForm.get("code").hasError("required") &&
+          bookForm.get("code").hasError("pattern")'>Books Name <strong>only Charecters allow</strong></mat-error>
+        </mat-form-field>
+        <div>
+          <button mat-raised-button type="submit" class="submit-btn" color="primary"><span
+              class='submit-title'>Submit</span></button>
+        </div>
+      </form>
+    </div>    
+  </mat-tab>
+  <mat-tab label="Books List">
+    <div *ngIf='tableshow'>
+      <app-book-table></app-book-table> 
+        </div>
+      </mat-tab>
+ </mat-tab-group>
