--- a/src/app/views/administration/religion-master/religion-master.component.html
+++ b/src/app/views/administration/religion-master/religion-master.component.html
@@ -1,6 +1,9 @@
+<mat-tab-group (selectedTabChange)="tabChanged($event)">
+  <mat-tab label="Master">  
+    
 <div class="mat-card">
   <mat-toolbar color='primary'><span style="color:#fff">Religion Master</span></mat-toolbar>
-  <form [formGroup]='religionForm' (ngSubmit)='submit()'>
+  <form [formGroup]='religionForm' #formDirective="ngForm" (ngSubmit)='submit(religionForm,formDirective)'>
 
     <mat-form-field class="example-full-width formFieldAlign">
       <input matInput formControlName='religionName' placeholder="Religion Name">
@@ -25,4 +28,11 @@
           class='submit-title'>Submit</span></button>
     </div>
   </form>
-</div>
+</div>    
+  </mat-tab>
+  <mat-tab label="Religion List">
+    <div *ngIf='tableshow ==true'>
+      <app-religion-table></app-religion-table> 
+    </div>
+    </mat-tab>
+</mat-tab-group>
