--- a/src/app/views/student-management/create-admission/create-admission.component.html
+++ b/src/app/views/student-management/create-admission/create-admission.component.html
@@ -6,251 +6,308 @@
       <mat-vertical-stepper [linear]="isLinear" #stepper>
   <mat-step [stepControl]="firstFormGroup">
     <mat-card>
-      <form>
-    <ng-template matStepLabel>Student Details</ng-template>
-      <div fxLayout="row">
-      
-        <mat-form-field class="example-full-width formFieldAlign">
-          <input matInput placeholder="SurName" >
+         <ng-template matStepLabel>Student Details</ng-template>
+         <form [formGroup]='studentDetailsForm'  (ngSubmit)='addmissionDetails()'>
+   
+         <div fxLayout="column">
+        <div fxLayoutAlign="space-evenly center">
+        <mat-form-field class="example-full-width" fxFlex='30'>
+          <input matInput formControlName='surname' placeholder="SurName" >
         </mat-form-field>
       
-        <mat-form-field class="example-full-width formFieldAlign">
-          <input matInput placeholder="Students Name">
+        <mat-form-field class="example-full-width" fxFlex='30'>
+          <input matInput formControlName='studentName' placeholder="Students Name">
         </mat-form-field>
-  
-        <mat-form-field class="example-full-width formFieldAlign">
-          <input matInput placeholder="Fathers Name">
-        </mat-form-field>
-      
-        <mat-form-field class="example-full-width formFieldAlign">
-          <input matInput placeholder="Mothers Name">
-        </mat-form-field>
-  
-        <mat-form-field class="example-full-width formFieldAlign">
-          <input matInput placeholder="Guardians Name" >
+    </div>
+    
+      <div fxLayoutAlign="space-evenly center">
+        <mat-form-field class="example-full-width " fxFlex='30'>
+          <input matInput formControlName='fatherName' placeholder="Fathers Name">
         </mat-form-field>
       
-          <mat-radio-group class="example-full-width formFieldAlign" >
-            <mat-radio-button value="1">Female</mat-radio-button>
+        <mat-form-field class="example-full-width " fxFlex='30'>
+          <input matInput formControlName='motherName' placeholder="Mothers Name">
+        </mat-form-field>
+  </div>
+      
+  <div fxLayoutAlign="space-evenly center">
+    
+      <mat-form-field class="example-full-width" fxFlex='30'>
+         <input matInput  formControlName='guardianName' placeholder="Guardians Name" >
+        </mat-form-field>
 
-            <mat-radio-button value="2" style="margin-left:2%">Male</mat-radio-button>
+          <mat-radio-group formControlName='gender' class="example-full-width " fxFlex='30' >
+            <mat-radio-button   value="female">Female</mat-radio-button>
+
+            <mat-radio-button  value="male" style="margin-left:2%">Male</mat-radio-button>
           </mat-radio-group>
-        
-          <mat-form-field class="example-full-width formFieldAlign">
-            <input matInput [matDatepicker]="picker" placeholder="Date of Birth">
+    </div> 
+  
+    <div fxLayoutAlign="space-evenly center">
+        <mat-form-field class="example-full-width" fxFlex='30' >
+            <input matInput formControlName='dob' [matDatepicker]="picker" placeholder="Date of Birth">
             <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
             <mat-datepicker #picker></mat-datepicker>
           </mat-form-field>
           
   
-        <mat-form-field class="example-full-width formFieldAlign">
-          <input matInput placeholder="Date Of Birth In Words">
+        <mat-form-field class="example-full-width" fxFlex='30' >
+          <input matInput formControlName='dobInWords' placeholder="Date Of Birth In Words">
         </mat-form-field>
-  
-        <mat-form-field class="example-full-width formFieldAlign">
-          <input matInput placeholder="placeOfBirth">
+  </div>
+
+  <div fxLayoutAlign="space-evenly center">
+   
+    <mat-form-field class="example-full-width" fxFlex='30' >
+          <input matInput formControlName='placeOfBirth' placeholder="placeOfBirth">
         </mat-form-field>
   
        
-        <mat-form-field class="example-full-width formFieldAlign">
-          <input matInput placeholder="UID No" >
+        <mat-form-field class="example-full-width" fxFlex='30'>
+          <input matInput formControlName='uID' placeholder="UID No" >
+        </mat-form-field>
+  </div>
+
+
+  <div fxLayoutAlign="space-evenly center">
+    <mat-form-field class="example-full-width" fxFlex='30' >
+          <input matInput formControlName='idNo' placeholder="ID No">
         </mat-form-field>
   
-        <mat-form-field class="example-full-width formFieldAlign">
-          <input matInput placeholder="ID No">
+        <mat-form-field class="example-full-width" fxFlex='30'>
+          <input matInput  formControlName='regNo' placeholder="Student Reg No" >
         </mat-form-field>
-  
-        <mat-form-field class="example-full-width formFieldAlign">
-          <input matInput placeholder="Student Reg No" >
-        </mat-form-field>
-  
-        <mat-form-field class="example-full-width formFieldAlign">
-          <input matInput placeholder="Year">
-        </mat-form-field>
-  
-        <mat-form-field class="example-full-width formFieldAlign">
-          <input matInput placeholder="Date">
-        </mat-form-field>
-  
+  </div>
+
         
-        <mat-form-field class="example-full-width formFieldAlign">
-          <input matInput placeholder="Income">
+  <div fxLayoutAlign="space-evenly center">
+    <mat-form-field class="example-full-width" fxFlex='30'>
+      <input matInput formControlName='income' placeholder="Income">
         </mat-form-field>
 
         
-        <mat-form-field class="example-full-width formFieldAlign">
-          <input matInput placeholder="Contact No">
+        <mat-form-field class="example-full-width" fxFlex='30'>
+          <input formControlName='contactNo' matInput placeholder="Contact No">
         </mat-form-field>
+</div>
 
-        <mat-form-field>
-          <mat-label>Status</mat-label>
-          <mat-select>
-            <mat-option >
-              Indian
+    <div fxLayoutAlign="space-evenly center">
+        <mat-form-field class="example-full-width" fxFlex='30'>
+        <mat-label>Status</mat-label>
+          <mat-select formControlName='status'>
+            <mat-option *ngFor='let x of status' [value]='x'>
+              {{x}}
             </mat-option>
           </mat-select>
         </mat-form-field>
         
 
-        <mat-form-field>
+        <mat-form-field fxFlex='30'>
           <mat-label>Live Status</mat-label>
-          <mat-select>
-            <mat-option >
-              Indian
+          <mat-select formControlName='liveStatus'>
+            <mat-option *ngFor='let x of liveStatus' [value]='x'>
+             {{x}}
             </mat-option>
           </mat-select>
         </mat-form-field>
         
-   
-        <mat-form-field class="example-full-width formFieldAlign">
-          <input matInput placeholder="Identity By Mark Or AadharNo;">
+   </div>
+
+   <div fxLayoutAlign="space-evenly center">
+  
+        <mat-form-field class="example-full-width " fxFlex='30'>
+          <input matInput formControlName='identityByMark' placeholder="Identity By Mark Or AadharNo;">
         </mat-form-field>
 
         
-        <mat-form-field>
+       <mat-form-field class="example-full-width " fxFlex='30'>
           <mat-label>Class Name</mat-label>
-          <mat-select>
-            <mat-option >
-              Indian
+          <mat-select formControlName='className'>
+            <mat-option *ngFor='let x of classData' [value]='x.code'>
+              {{x.className}}
             </mat-option>
           </mat-select>
         </mat-form-field>
-        
+   </div>     
 
-        <mat-form-field>
+   <div fxLayoutAlign="space-evenly center">
+    <mat-form-field class="example-full-width " fxFlex='30'>
+      <mat-label>School</mat-label>
+      <mat-select formControlName='schoolId'>
+        <mat-option *ngFor='let x of schoolname' [value]='x.schoolCode'>
+          {{x.schoolName}}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+
+    <mat-form-field class="example-full-width " fxFlex='30'>
+      <mat-label>School Type</mat-label>
+      <mat-select formControlName='schoolTypeId'>
+        <mat-option *ngFor='let x of schoolType' [value]='x.code'>
+          {{x.schoolTypeName}}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+
+   </div>
+
+   <div fxLayoutAlign="space-evenly center">
+       <mat-form-field fxFlex='30'>
           <mat-label>Religion Name</mat-label>
-          <mat-select>
-            <mat-option >
-              Indian
+          <mat-select formControlName='religionName'>
+            <mat-option *ngFor='let x of religionData' [value]='x.religionCode'>
+              {{x.religionName}}
             </mat-option>
           </mat-select>
         </mat-form-field>
-        
->
-      
-  
-        <mat-form-field>
+         
+        <mat-form-field fxFlex='30'>
           <mat-label>Caste Name</mat-label>
-          <mat-select>
-            <mat-option >
-              Indian
+          <mat-select formControlName='casteName'>
+            <mat-option *ngFor='let x of casteData' [value]='x.casteCode'>
+              {{x.casteName}}
             </mat-option>
           </mat-select>
         </mat-form-field>
-        
+   </div>     
 
         
-  
-        <mat-form-field>
-          <mat-label>SubCaste Name</mat-label>
-          <mat-select>
-            <mat-option >
-              Indian
+   <div fxLayoutAlign="space-evenly center">
+    <mat-form-field fxFlex='30'>
+       <mat-label>SubCaste Name</mat-label>
+          <mat-select formControlName='subCaste'>
+            <mat-option *ngFor='let x of subCasteData' [value]='x.subCastecode'>
+              {{x.subCasteName}}
             </mat-option>
           </mat-select>
         </mat-form-field>
         
  
-        <mat-form-field>
+        <mat-form-field fxFlex='30'>
           <mat-label>Occupation</mat-label>
-          <mat-select>
-            <mat-option >
-              Indian
+          <mat-select formControlName='occupation'>
+            <mat-option *ngFor='let x of occupationData' [value]='x.occupationCode'>
+              {{x.occupationName}}
             </mat-option>
           </mat-select>
         </mat-form-field>
         
-
+</div>
      
   
-        <mat-form-field>
-          <mat-label>Society</mat-label>
-          <mat-select>
-            <mat-option >
-              Indian
+<div fxLayoutAlign="space-evenly center">
+    <mat-form-field fxFlex='30'>
+        <mat-label>Society</mat-label>
+          <mat-select formControlName='society'>
+            <mat-option *ngFor='let x of society' [value]='x.code'>
+              {{x.societyName}}
             </mat-option>
           </mat-select>
+        </mat-form-field>
+    
+        <mat-form-field fxFlex='30'>
+          <mat-label>Mother Tongue</mat-label>
+          <mat-select formControlName='mothertongue'>
+            <mat-option *ngFor='let x of motherTongueData' [value]='x.code'>
+              {{x.name}}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+            
+
+      </div>      
+     
+  <div fxLayoutAlign="space-evenly center">
+    <mat-form-field fxFlex='30'>
+      <mat-label>Nationality</mat-label>
+      <mat-select formControlName='nationality'>
+        <mat-option *ngFor='let x of nationalityData' [value]='x.code'>
+          {{x.name}}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+
+        <mat-form-field class="example-full-width" fxFlex='30' >
+          <input matInput formControlName='dob' [matDatepicker]="picker1" placeholder="Date">
+          <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
+          <mat-datepicker #picker1></mat-datepicker>
         </mat-form-field>
         
 
-        <mat-form-field>
-          <mat-label>Nationality</mat-label>
-          <mat-select>
-            <mat-option >
-              Indian
-            </mat-option>
-          </mat-select>
-        </mat-form-field>
-        
-     
-        
-        <mat-form-field class="example-full-width formFieldAlign">
-          <input matInput placeholder="Mother Name">
-        </mat-form-field>
-     
-     
-        <mat-form-field>
-          <mat-label>Branch Name</mat-label>
-          <mat-select>
-            <mat-option >
-              Indian
-            </mat-option>
-          </mat-select>
-        </mat-form-field>
-        
- 
-     
-        <div>
-      </div>
-        <button mat-button matStepperNext>Next</button>
+    
+   </div>     
+  </div>
+      <div>
+        <button mat-button matStepperNext  style="float: right;">Next</button>
       </div>
     </form>
   </mat-card>
   </mat-step>
+
   <mat-step [stepControl]="secondFormGroup">
-    <form >
+    <form [formGroup]='addressForm' (ngSubmit)='addressDetail()'>
       <ng-template matStepLabel>Address Details</ng-template>
-      <mat-form-field>
-        <input matInput placeholder="Address"  required>
+   
+    <div fxLayout='column'>
+     
+     <div fxLayoutAlign="space-evenly center" fxLayoutAlign="space-evenly center">
+
+      <mat-form-field class="example-full-width" fxFlex='30'>
+        <input matInput formControlName='pinCode' placeholder="PinCode" >
       </mat-form-field>
-      <div>
-        <button mat-button matStepperPrevious>Back</button>
-        <button mat-button matStepperNext>Next</button>
-      </div>
-    </form>
-  </mat-step>
-  <mat-step [stepControl]="secondFormGroup">
-    <form >
-      <ng-template matStepLabel>School Details</ng-template>
-      <mat-form-field>
-        <input matInput placeholder="Address"  required>
+     
+      <mat-form-field fxFlex='30'>
+        <mat-label>City </mat-label>
+           <mat-select formControlName='city'>
+             <mat-option *ngFor='let x of cities' [value]='x.code'>
+               {{x.name}}
+             </mat-option>
+           </mat-select>
+         </mat-form-field>
+     </div>
+
+    <div fxLayoutAlign="space-evenly center" fxLayoutAlign="space-evenly center">
+
+      <mat-form-field fxFlex='30'>
+        <mat-label>State </mat-label>
+           <mat-select formControlName='state'>
+             <mat-option *ngFor='let x of state' [value]='x.code'>
+               {{x.name}}
+             </mat-option>
+           </mat-select>
+         </mat-form-field>
+         
+         <mat-form-field fxFlex='30'>
+          <mat-label>country</mat-label>
+             <mat-select formControlName='country'>
+               <mat-option *ngFor='let x of country' [value]='x.code'>
+                 {{x.name}}
+               </mat-option>
+             </mat-select>
+           </mat-form-field>
+   </div> 
+  
+  
+  <div fxLayoutAlign="space-evenly center" fxLayoutAlign="space-evenly center">
+
+      <mat-form-field class="example-full-width" fxFlex='74'>
+        <input matInput formControlName='address' placeholder="Address" >
       </mat-form-field>
+  </div>
+</div>
+ 
       <div>
-        <button mat-button matStepperPrevious>Back</button>
         <button mat-button matStepperNext>Next</button>
       </div>
     </form>
   </mat-step>
  
-  <mat-step [stepControl]="secondFormGroup">
-    <form >
-      <ng-template matStepLabel>Fee Details</ng-template>
-      <mat-form-field>
-        <input matInput placeholder="Address"  required>
-      </mat-form-field>
-      <div>
-        <button mat-button matStepperPrevious>Back</button>
-        <button mat-button matStepperNext>Next</button>
-      </div>
-    </form>
-  </mat-step>
-  
-  <mat-step>
+    <mat-step>
     <ng-template matStepLabel>Done</ng-template>
     You are now done.
     <div>
       <button mat-button matStepperPrevious>Back</button>
-      <button mat-button (click)="stepper.reset()">Reset</button>
+      <button mat-button (click)="submitAddmissionForm()">Submit</button>
     </div>
   </mat-step>
 </mat-vertical-stepper>
