--- a/src/app/views/administration/admin-table/sub-caste-table/sub-caste-table.component.html
+++ b/src/app/views/administration/admin-table/sub-caste-table/sub-caste-table.component.html
@@ -1,6 +1,6 @@
   <!--<mat-card>-->
   <div class='table-card'>
-    <mat-form-field>
+    <mat-form-field style="float: right;width: 30%;">
       <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Search..">
     </mat-form-field>
     <mat-toolbar color='primary'><span style="color:#fff">SubCaste List</span></mat-toolbar>
@@ -24,8 +24,7 @@
       <ng-container matColumnDef="edit">
         <th mat-header-cell *matHeaderCellDef class="icon-align "> Edit</th>
         <td mat-cell *matCellDef="let element" class="icon-align">
-          <i class="material-icons icon_edit_color" routerLink='../../master-layout/payment'
-            [queryParams]='{id:element.id}' matTooltip="Edit">create</i>
+          <i class="material-icons icon_edit_color" (click)='openDialog(element.id)' matTooltip="Edit">create</i>
         </td>
       </ng-container>
   
